# languages

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .travis.yml  Cargo.toml  Dockerfile  LICENSE  README.md  TODO.md  dev  docker-build  docker-uninstall  install  run  rustfmt.toml  setup  test
altery-lang/: .editorconfig  README.md  test
compiler/: Cargo.toml  build.rs  dev  setup
compiler/src/: app.rs  cmd.rs  emit_js.rs  exports.rs  gen_mir.rs  lib.rs  lsp.rs  mir.rs  msg.rs  parse.rs  pir.rs  regalloc.rs  rir.rs  sema.rs  semantics.rs  syntax.rs  tests.rs  tokenize.rs
compiler/stdlib/: prelude.picomet
compiler/tests/: tests.rs
confwell/: README.md
examples/: solver.atlisp
flown-lang/docs/: draft.md
foxx-lang/: Cargo.toml
foxx-lang/foxx/: Cargo.toml
foxx-lang/foxx/src/: lib.rs  xir_eval.rs  xir_gen.rs
foxx-lang/foxx_check/: Cargo.toml
foxx-lang/foxx_codegen/: Cargo.toml
foxx-lang/foxx_runtime/: Cargo.toml
foxx-lang/foxx_syntax/: Cargo.toml
foxx-lang/foxx_util/: Cargo.toml
foxx-lang/scripts/: accept
joy/: .gitignore  Joy.sln  LICENSE  run
joy-lang-fs/: .editorconfig  joy-lang.sln
joy-lang-fs/JoyLang/: Program.fs
joy-lang-rs/: .gitattributes  Cargo.toml
joy-lang-rs/joy/: Cargo.toml
joy-lang-rs/joy/src/: lib.rs  xir_eval.rs  xir_gen.rs
joy-lang-rs/joy_syntax/: Cargo.toml
joy-lang-rs/joy_syntax/src/: ast.rs  grammar.lalrpop  lib.rs  parse.rs  tokenize.rs
joy-lang-rs/joy_util/: Cargo.toml
joy/Joy/: Joy.fsproj  Lexer.fsi  Lexer.fsl  Parser.fsi  Parser.fsy  Program.fs
joy/Joy.Tests/: BasicTests.fs  Joy.Tests.fsproj
lambda-calc-rs/: Cargo.toml
lambda-calc-rs/lc-utils/: Cargo.toml
lambda-calc-rs/lc-utils/src/: deque_chan.rs  lib.rs  parser.rs  token_kind_trait.rs  token_stream.rs  token_with_trivia.rs  tokenizer.rs
lambda-calc-rs/lc-v1/: Cargo.toml
lambda-calc-rs/lc-v1/src/: lib.rs  main.rs
lambda-calc-rs/lc-v1/src/ast/: a_parser.rs  a_tree.rs
lambda-calc-rs/lc-v1/src/eval/: code_gen.rs  eval.rs  type_check.rs
lambda-calc-rs/lc-v1/src/parse/: parse_decls.rs  parse_exprs.rs  parse_root.rs  parse_stmts.rs  parse_tys.rs  parser.rs  parser_host.rs
lambda-calc-rs/lc-v1/src/semantics/: analyze.rs  local_symbol.rs  prim.rs  prim_ty.rs  symbol.rs  ty.rs
lambda-calc-rs/lc-v1/src/semantics/scope/: name_resolution.rs  scope.rs  scope_chain.rs  scope_kind.rs  scope_resolver.rs
lambda-calc-rs/lc-v1/src/syntax/: syntax_token.rs  syntax_tree.rs
lambda-calc-rs/lc-v1/src/token/: token_data.rs  token_kind.rs  tokenize_rules.rs
lambda-calc-rs/lc-v1/src/ty_inference/: cache_cell.rs  intern.rs  ref_wrapper.rs  tyi.rs
lambda-fs/: .gitignore  README.md  lambda-fs.sln  test
lambda-fs/LambdaCli/: LambdaCli.fsproj  Program.fs
lambda-fs/LambdaDomain/: Hir.fs  LambdaDomain.fsproj  Library.fs  Location.fs
lambda-fs/LambdaOptimize/: LambdaOptimize.fsproj  Library.fs  Oir.fs  notes.md
lambda-fs/LambdaSemantics/: Infer.fs  LambdaSemantics.fsproj  Library.fs
lambda-fs/LambdaSyntax/: HirGen.fs  LambdaSyntax.fsproj  Library.fs  Parse.fs  ScopeRes.fs  Syntax.fs  Token.fs  Tokenize.fs
linear/: README.md  linear-lang.sln  run
linear/Linear/: Ast.fs  Eval.fs  Linear.fsproj  Location.fs  Parse.fs  Program.fs  Token.fs  Tokenize.fs  TypedIR.fs  (+1 more)
meeley-lang/: .editorconfig  README.md  ocaml-cheetsheet.md  run
metal-lang/: Cargo.toml
milone-pattern-compile/: .editorconfig  .gitignore  Compile.fs  CompileTests.fs  MilonePatternCompile.fs  MilonePatternCompile.fsproj  Program.fs  run
milone-syntax-v2/: Cli.fs  Dump.fs  EscapeSequence.fs  Eval.fs  Hir.fs  HirGen.fs  MiloneSyntaxV2.fsproj  MiloneSyntaxV2.milone  Program.fs  Sema.fs  SemaNameResolve.fs  SemaTypeCheck.fs  Source.fs  Syntax.fs  SyntaxParse.fs  SyntaxScope.fs  SyntaxTokenize.fs  run  todo.txt
ninjutsu/: .gitattributes  .gitignore  Cargo.toml  install-ninja  run
ninjutsu/src/: ast.rs  lib.rs  main.rs  parse.rs  tokenize.rs
ninjutsu/tests/hello/: hello.nin  io.nin
phancie-lang/: dev  memo.md  phancie-lang.sln
phos-lang/: .editorconfig  Cargo.toml  README.md  notes.md  test
picomet/: .editorconfig  .gitignore  Cargo.toml  build
picomet-lang/: .editorconfig  .travis.yml  LICENSE  TODO.md
picomet-lang/compiler/: Cargo.toml  dev
picomet-lang/compiler/src/: rir.rs
picomet-lang/compiler/src/app/: run.rs
picomet-lang/compiler/src/emit_js/: gen.rs
picomet-lang/compiler/src/lsp/: lsp_handler.rs  lsp_model.rs
picomet-lang/compiler/src/lsp/features/: hover.rs
picomet-lang/compiler/src/pir/: gen.rs
picomet-lang/compiler/src/semantics/: analyze.rs  msg.rs  prim.rs  symbol.rs  ty.rs
picomet-lang/compiler/src/syntax/: exp.rs  tokenize.rs
raii-lang/: memo.md  run  test
regrammar/: README.md  regrammar.regrammar
runtime/: .gitignore  Cargo.toml  setup
shark-lang/: Cargo.toml
shark-lang/shark_syntax/: Cargo.toml
shark-lang/shark_syntax/src/: ast.rs  lib.rs  parse.rs  tokenize.rs
solver/: .gitignore  Cargo.toml  docker-lsp  docker-picomet  docker-run
src/: build.rs  lib.rs
test_gen/: Cargo.toml
tests/: test.altery_il  test_abs002_abc086_a_product.toml  test_abs005_abc087_b_coins.toml  test_abs006_abc083_b_some_sums.toml  test_char_literal_errors.toml  test_char_literal_escape.toml  test_example_fact.toml  test_example_succ.toml  test_example_welcome_to_atcoder.toml  test_fun_generic.toml  test_if_basic_cases.toml  test_if_else.toml  test_if_log_and.toml  test_int_add_mul.toml  test_int_add_type_error.toml  test_int_comparison.toml  test_int_negative_prefix.toml  test_io_read_int.toml  test_io_read_str_echo.toml  test_io_write.toml  test_loop_break.toml  test_loop_continue.toml  test_prelude_println_str.toml  test_slice_subslice.toml  test_str.toml  test_str_literal_escape.toml  test_syntax_unexpected_eof.toml  test_type_annotation.toml  test_unit_literal_error.toml  test_unit_literal_ok.toml  test_var_annotation.toml  test_var_local.toml  test_while_basic_cases.toml  tests.rs
typecheck/: README.md  run  typecheck.sln
vscode-ext/: .gitignore  build  install  package.json  uninstall
wasm-lang/: wasm-lang.sln
xbnf_boot/: dev
(+441 files in other folders)
