[package]
name = "foxx"
version = "0.1.0"
authors = ["vain0x <vainzerox@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
foxx_check = { path = "../foxx_check" }
foxx_codegen = { path = "../foxx_codegen" }
foxx_syntax = { path = "../foxx_syntax" }
foxx_util = { path = "../foxx_util" }

# Bump allocator <https://github.com/fitzgen/bumpalo>
bumpalo = { version = "3.6.1", features = ["boxed", "collections"] }

# Logging API <https://github.com/rust-lang/log>
log = { version = "0.4.14", features = ["std"] }

[dev-dependencies]
# Snapshot testing <https://github.com/rust-analyzer/expect-test>
expect-test = { git = "https://github.com/rust-analyzer/expect-test.git", tag = "v1.0.1" }
