[package]
name = "joy_util"
version = "0.1.0"
authors = ["vain0x <vainzerox@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Bump allocator <https://github.com/fitzgen/bumpalo>
bumpalo = { version = "3.6.1", features = ["boxed", "collections"] }

# Logging API <https://github.com/rust-lang/log>
log = { version = "0.4.14", features = ["std"] }
