[package]
name = "lc-utils"
version = "0.1.0"
authors = ["vain0x <vainzerox@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Bump Allocation <https://github.com/fitzgen/bumpalo>
bumpalo = "3"

# Logging API <https://github.com/rust-lang/log>
log = { version = "0.4", features = ["std"] }
