[package]
name = "lc-v1"
version = "0.1.0"
authors = ["vain0x <vainzerox@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lc-utils = { path = "../lc-utils" }

# Bump allocator <https://github.com/fitzgen/bumpalo>
bumpalo = "3"

# Logging API <https://github.com/rust-lang/log>
log = { version = "0.4", features = ["std"] }

# Snapshot testing <https://github.com/rust-analyzer/expect-test>
expect-test = { git = "https://github.com/rust-analyzer/expect-test.git", tag = "v1.0.1" }
