[package]
name = "lc-v1"
version = "0.1.0"
authors = ["vain0x <vainzerox@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lc-utils = { path = "../lc-utils" }

# Bump allocator <https://github.com/fitzgen/bumpalo>
bumpalo = { version = "3", features = ["boxed", "collections"] }

# Logging API <https://github.com/rust-lang/log>
log = { version = "0.4", features = ["std"] }

# Snapshot testing <https://github.com/rust-analyzer/expect-test>
expect-test = { git = "https://github.com/rust-analyzer/expect-test.git", tag = "v1.0.1" }

# 構文木を表現するためのもの
# rowan = { git = "https://github.com/rust-analyzer/rowan.git", tag = "v0.10.0" }

# 標準入力を読み込むもの。(カーソルキーなどに対応している。)
# <https://github.com/kkawakam/rustyline>
rustyline = "6"
