[package]
name = "picomet-lang-compiler"
version = "0.1.0"
authors = ["vain0x <vainzerox@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
env_logger = { version = "0", default-features = false }
lsp-types = "0.56"
log = "0"
picomet-lang-runtime = { path = "../runtime" }
serde = "1"
serde_derive = "1"
serde_json = "1"

[build-dependencies]
picomet_test_gen = { path = "../test_gen" }
